--- a/lottery-application/pom.xml
+++ b/lottery-application/pom.xml
@@ -11,6 +11,17 @@
 
     <artifactId>lottery-application</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>cn.itedus.lottery</groupId>
+            <artifactId>lottery-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
